[gd_scene load_steps=11 format=2]

[ext_resource path="res://Resourses/Fonts/kp_45.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/Audio/sad-song_norameld.wav" type="AudioStream" id=2]
[ext_resource path="res://Resourses/Fonts/kfn_40_o1.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/UIScenes/GameOverScreen.gd" type="Script" id=4]
[ext_resource path="res://Assets/UI/CharacterArt/Boss_Thinking.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/CharacterArt/Boss_Dissapointed.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/CharacterArt/Friend_M1.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/CharacterArt/Friend_F1.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]
resource_name = "GameOver"
length = 70.0
tracks/0/type = "value"
tracks/0/path = NodePath("Hit:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 67.5, 68.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Boss/BossThinking:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2.8, 3, 8, 9, 13.8, 14, 36, 37, 45.8, 46, 56.8, 57, 66, 66.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Boss/Friend_F1:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 50.8, 51 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Boss/Friend_M1:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 51.8, 52 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Hit:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Boss/BossDissapointed:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Boss/BossThinking:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Boss/Friend_F1:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Boss/Friend_M1:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="GameOverScreen" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Boss" type="Node" parent="."]

[node name="BossDissapointed" type="TextureRect" parent="Boss"]
margin_left = 350.0
margin_right = 2598.0
margin_bottom = 3001.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BossThinking" type="TextureRect" parent="Boss"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 350.0
margin_right = 2598.0
margin_bottom = 3001.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Friend_F1" type="TextureRect" parent="Boss"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 210.0
margin_top = 10.0
margin_right = 2458.0
margin_bottom = 3011.0
rect_scale = Vector2( 0.18, 0.18 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Friend_M1" type="TextureRect" parent="Boss"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 600.0
margin_right = 2848.0
margin_bottom = 3001.0
rect_scale = Vector2( 0.18, 0.18 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -640.0
margin_top = -200.0
margin_right = 640.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/GameOver = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 225.0
margin_top = 555.0
margin_right = -55.0
margin_bottom = -15.0
rect_min_size = Vector2( 1000, 150 )
custom_fonts/font = ExtResource( 1 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
margin_left = 5.0
margin_top = 550.0
margin_right = 205.0
margin_bottom = 595.0
rect_min_size = Vector2( 200, 45 )
custom_fonts/font = ExtResource( 3 )
text = "Hazel:"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hit" type="ColorRect" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next_char" type="Timer" parent="."]

[node name="next_message" type="Timer" parent="."]

[node name="GameOverMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -5.0

[connection signal="timeout" from="next_char" to="." method="_on_next_char_timeout"]
[connection signal="timeout" from="next_message" to="." method="_on_next_message_timeout"]
